# brickwork

./: README.md  meson.build
include/: doctest.h  simple_svg_1.0.0.hpp
src/: README.md  brickwork.cc  brickwork.hh  draw.cc  draw.hh  main.cc  meson.build  row.cc  row.hh  test.cc  wall.cc  wall.hh
